--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <p class="list"><strong>Step 1.</strong> <a title="Download Getting Started guide" href="Getting started with Authority Editor.pdf">read the guide (pdf) </a></p>
       <a class="img" title="Download Getting Started guide" href="Getting started with Authority Editor.pdf"><img src="getting_started.png" alt="Download Getting Started guide"/></a>
       <br/>
-      <p class="list"><strong>Step 2.</strong> <a title="Download Windows installer" href="http://www.github.com/srnsw/ae/archives/master">download and install (Windows) </a></p>
+      <p class="list"><strong>Step 2.</strong> <a title="Download Windows installer" href="https://github.com/downloads/srnsw/ae/InstallAuthorityEditor.exe">download and install (Windows) </a></p>
       <a class="img" title="Download Windows installer" href="https://github.com/downloads/srnsw/ae/InstallAuthorityEditor.exe"><img src="installer.png" alt="Download Windows installer"/></a>
     </div>
   </body>
