--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <h1>Retention and disposal authorities in XML</h1>
     <h2>Why XML?</h2>
-    <p>State Records NSW is working to unlock the information contained within retention and disposal authorities. For agencies, this will mean simpler and richer importing into, and linkages with, their own systems. For State Records NSW, it will mean improved control and a broader perspective of disposal decisions across government. XML is ideal for this purpose because it structures the information inside documents.</p>
+    <p>State Records Authority of NSW is working to unlock the information contained within retention and disposal authorities. For agencies, this will mean simpler and richer importing into, and linkages with, their own systems. For State Records NSW, it will mean improved control and a broader perspective of disposal decisions across government. XML is ideal for this purpose because it structures the information inside documents.</p>
     <h2>Authority Editor</h2>
     <p><em>Authority Editor</em> is an application created by State Records NSW to simplify the task of editing retention and disposal authorities in XML. If you prefer to use a different tool you may, but please ensure that your XML is compliant with State Records NSW's schema (<a title="XML schema for retention and disposal authorities" href="http://www.records.nsw.gov.au/schemas/rda/SRNSW_RDA.xsd">available here</a>).</p>
     <div class="box">
