changed page title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta content="Authority Editor is an application created by State Records NSW to edit retention and disposal authorities in XML." name="description"/>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Retention and disposal authorities in XML</title>
+    <title>Authority Editor - Retention and disposal authorities in XML</title>
   </head>
   <body>
    <div class="logo"><a class="img" title="State Records NSW website" href="http://www.records.nsw.gov.au"><img src="logo.jpg" alt="State Records NSW website" /></a></div>
