--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
    <div class="menu">
       <ul>
         <li><a title="State Records NSW disposal procedures" href="http://www.records.nsw.gov.au/recordkeeping/topics/disposing-of-records/preparing-a-retention-and-disposal-authority/preparing-a-retention-and-disposal-authority/">Disposal procedures</a></li>
-        <li class="subsequent"><a title="Authority Editor wiki" href="http://www.github.com/srnsw/ae/wiki">Help pages</a></li>
+        <li class="subsequent"><a title="Authority Editor wiki" href="http://www.github.com/srnsw/ae/wiki">Help</a></li>
         <li class="subsequent"><a title="Authority Editor bug tracker" href="http://www.github.com/srnsw/ae/issues">Report a bug</a></li>
         <li class="subsequent"><a title="Authority Editor github repository" href="http://www.github.com/srnsw/ae">Developers</a></li>
-        <li class="subsequent"><a title="Contact State Records NSW" href="http://www.records.nsw.gov.au/contact-us">Contact</a></li>
+        <li class="subsequent"><a title="Join the Authority Editor mailing list" href="http://groups.google.com/group/authorityeditor">Mailing list</a></li>
       </ul>
     </div>
     <h1>Retention and disposal authorities in XML</h1>
